--- a/public/style.css
+++ b/public/style.css
@@ -69,11 +69,6 @@ html, body {
 	padding: 20px;
 }
 
-.sidebar {
-	height: 100%;
-	overflow: auto;
-}
-
 .center {
 	margin-left: auto;
 	margin-right: auto;
@@ -92,6 +87,12 @@ html, body {
 #canvas-div {
 	height: 100%;
 	min-height: 100%;
+}
+
+#convo {
+	height: 300px;
+	width: 100%;
+	resize: none;
 }
 
 /* Colors*/
