--- a/public/style.css
+++ b/public/style.css
@@ -18,6 +18,31 @@ html, body {
 	height: auto !important;
 }
 
+#nav-bar {
+	width: 40%;
+}
+
+#size-selector-div {
+	height: 30px;
+	width: 200px;
+	float: right;
+	margin-right: 10px;
+	padding-top: 15px;
+}
+
+#color-selector-div {
+	float: right;
+	margin-right: 10px;
+}
+
+#color-selector {
+	height: 33px;
+}
+
+#url-button {
+	float: right;
+}
+
 .header {
 	color: #FFF;
 }
@@ -93,6 +118,31 @@ html, body {
 	height: 300px;
 	width: 100%;
 	resize: none;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+#send {
+	width: 13%;
+	margin-top: 0px;
+	color: #FFF;
+}
+
+#msg {
+	width: 83%;
+}
+
+#convo-header {
+	padding-left: 10px;
+	padding-top: 5px;
+	height: 30px;
+	border-top-right-radius: 10px 10px;
+	border-top-left-radius: 10px 10px;
+	color: #FFF;
+}
+
+#footer {
+	min-height: 30px;
 }
 
 /* Colors*/
