--- a/public/style.css
+++ b/public/style.css
@@ -25,22 +25,16 @@ html, body {
 #size-selector-div {
 	height: 30px;
 	width: 200px;
-	float: right;
-	margin-right: 10px;
 	padding-top: 15px;
-}
-
-#color-selector-div {
-	float: right;
-	margin-right: 10px;
 }
 
 #color-selector {
 	height: 33px;
 }
 
-#url-button {
+.float-right {
 	float: right;
+	margin-left: 10px;
 }
 
 .header {
@@ -156,9 +150,8 @@ html, body {
 	font-size: 120px;
 	width: 200px;
 	height: 200px;
-	padding-top: 20px;
-	padding-left: 35px;
 	float: left;
+	margin-right: 20px;
 }
 
 .exclamation {
